src/objects/FeederProjectAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Feeder__c</fullName>
        <label>Feeder</label>
        <referenceTo>Feeder__c</referenceTo>
        <relationshipLabel>FeederProjectAssociation</relationshipLabel>
        <relationshipName>FeederProjectAssociation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inspire_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspire Project</label>
        <referenceTo>inspire1__Project__c</referenceTo>
        <relationshipLabel>Feeders</relationshipLabel>
        <relationshipName>Feeders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestones Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>FeederProjectAssociation</relationshipLabel>
        <relationshipName>FeedProjAssn</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FeederProjectAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FeederProject-{0000}</displayFormat>
        <label>FeederProjectAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FeederProjectAssociation</pluralLabel>
    <recordTypes>
        <fullName>Eversource_13_kV</fullName>
        <active>true</active>
        <description>This is a record type for all Eversource Feeders that have 13 kV Voltage</description>
        <label>Eversource 13 kV</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>